# rustPcParadiseBot

./: Cargo.toml
src/: db.rs  main.rs
src/cogs/: roles.rs
src/db/: query_output.rs
